SpicylandStart.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spicyland
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spicyland
  template:
    metadata:
      labels:
        app: spicyland
    spec:
      containers:
      - name: spicyland
        image: andreas995/spicyland:latest
        ports:
        - containerPort: 80
