dbspicyland.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dbspicyland
spec:
  containers:
  - name: dbspicyland
    image: mcr.microsoft.com/mssql/server:2022-preview-ubuntu-22.04
    ports:
    - containerPort: 1433
    volumeMounts:
    - name: images-volume
      mountPath: /app/wwwroot/Images1
  hostname: dbspicyland
  dnsPolicy: ClusterFirst
  restartPolicy: Always
  volumes:
  - name: images-volume
    hostPath:
      path: /mnt/c/Images
