spicyland.yaml
apiVersion: v1
kind: Pod
metadata:
  name: spicyland
spec:
  containers:
  - name: spicyland
    image: andreas995/spicyland:latest

    ports:
    - containerPort: 8080
    volumeMounts:
    - name: images-volume
      mountPath: /app/wwwroot/Images1
  hostname: spicyland
  dnsPolicy: ClusterFirst
  restartPolicy: Always
  volumes:
  - name: images-volume
    hostPath:
      path: /mnt/c/Images
