KuberSpycyland_.yaml
apiVersion: v1
kind: Service
metadata:
  name: dbspicyland
spec:
  selector:
    app: dbspicyland
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dbspicyland
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dbspicyland
  template:
    metadata:
      labels:
        app: dbspicyland
    spec:
      containers:
        - name: dbspicyland
          image: mcr.microsoft.com/mssql/server:2022-preview-ubuntu-22.04
          ports:
            - containerPort: 1433
---
apiVersion: v1
kind: Service
metadata:
  name: spicyland
spec:
  selector:
    app: spicyland
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spicyland
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spicyland
  template:
    metadata:
      labels:
        app: spicyland
    spec:
      containers:
        - name: spicyland
          image: andreas995/spicyland:latest
          ports:
            - containerPort: 8080
