nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: spicyland-service
spec:
  selector:
    app: spicyland
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
