dbspicyland-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dbspicyland-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dbspicyland-service
                port:
                  number: 1433
