KuberSpycyland.yaml
apiVersion: v1
kind: Service
metadata:
  name: dbspicyland
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal-subnet: aks-subnet
spec:
  selector:
    app: dbspicyland
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
  type: LoadBalancer
  loadBalancerIP: 57.152.59.240

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: dbspicyland
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dbspicyland
  template:
    metadata:
      labels:
        app: dbspicyland
    spec:
      containers:
        - name: mssql-server
          image: andreas995/dbspicyland:latest
          ports:
            - containerPort: 1433
---

apiVersion: v1
kind: Service
metadata:
  name: spicyland
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal-subnet: aks-subnet
spec:
  selector:
    app: spicyland
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
  loadBalancerIP: 57.152.59.240

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: spicyland
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spicyland
  template:
    metadata:
      labels:
        app: spicyland
    spec:
      containers:
        - name: spicyland
          image: andreas995/spicyland:latest
          ports:
            - containerPort: 8080
---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-spicyland-to-dbspicyland
spec:
  podSelector:
    matchLabels:
      app: dbspicyland
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: spicyland

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dbspicyland-to-spicyland
spec:
  podSelector:
    matchLabels:
      app: spicyland
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: dbspicyland

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spicyland-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: spicyland.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spicyland
                port:
                  number: 80
    - host: dbspicyland.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dbspicyland
                port:
                  number: 1433
